Fri Nov  4 14:54:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c: fix possible buffer overflow

Fri Sep 23 13:39:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/write.c:
	- fix possible core (patch from Sergey A. Cherukhin)

Tue Sep 13 11:39:19 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: backported memory leak on failed connection

Sun Aug 14 11:00:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/preperror.c:
	- catch error preparing statement

Mon Aug  8 13:13:24 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: support strange MS specification

Tue Aug  2 18:54:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- dbretlen should return 0 for NULL results

Mon Aug  1 20:27:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c:
	- check for NULL pointer (suggested by Chad Jones)

Mon Jul 25 10:45:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix for bigendian machine

Fri Jul 22 13:38:26 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c: fix possible core calling strftime

Mon Jul 04 08:41:35 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: final rtrim version

Fri Jul 01 16:37:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/dblib.c:
	- applied Bill Thompson patch (slightly modified)

Mon May 30 09:33:52 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- fix core if dblastrow called after last dbresults
	* src/dblib/rpc.c: backport fix for blob and rpc
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- backport SQLExtendedFetch implementation

Sat Apr  9 10:11:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: bump version to avoid clash
	* src/dblib/bcp.c: